# openclaw-tui

./: .gitignore  README.md  build-windows.ps1  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: generate-icons.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/api/: copilot.rs  mod.rs  openai.rs
